added auth validation endpoint
